--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source =skinet.db"
-  }
+  },
+  "ApiUrl" :  "http://localhost:5001/"
 }
